--- a/headerfiyat.html
+++ b/headerfiyat.html
@@ -1,7 +1,7 @@
-<body>
+<!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
- 
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/" rel="noopener" target="_blank"><span class="blue-text">Markets</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
@@ -26,12 +26,12 @@
       "title": "Ethereum"
     }
   ],
-  "showSymbolLogo": true,
+  "showSymbolLogo": false,
   "colorTheme": "light",
   "isTransparent": false,
-  "displayMode": "adaptive",
+  "displayMode": "regular",
   "locale": "en"
 }
   </script>
 </div>
-</body>
+<!-- TradingView Widget END -->
